--- a/public_html/scss/theme.scss
+++ b/public_html/scss/theme.scss
@@ -7,3 +7,4 @@
 @import "theme-partials/_animations.scss";
 @import "theme-partials/_base.scss"; 
 @import "theme-partials/_header.scss";
+@import "theme-partials/_lead-section.scss";
