--- a/public_html/scss/theme.scss
+++ b/public_html/scss/theme.scss
@@ -8,3 +8,4 @@
 @import "theme-partials/_base.scss"; 
 @import "theme-partials/_header.scss";
 @import "theme-partials/_lead-section.scss";
+@import "theme-partials/_trends.scss";
