--- a/public_html/scss/theme.scss
+++ b/public_html/scss/theme.scss
@@ -9,3 +9,4 @@
 @import "theme-partials/_header.scss";
 @import "theme-partials/_lead-section.scss";
 @import "theme-partials/_trends.scss";
+@import "theme-partials/_services.scss";
