--- a/public_html/scss/theme-partials/_services.scss
+++ b/public_html/scss/theme-partials/_services.scss
@@ -18,7 +18,6 @@ $services-item-bg-2 : #ECD9D9;
             }
         }
     }
-
     .services-item{
         background-color: $services-item-bg;
         &:nth-of-type(even){
@@ -27,8 +26,9 @@ $services-item-bg-2 : #ECD9D9;
         figure{
             overflow: hidden;
             img{
+                transition: 0.7s linear;
                 &:hover{
-                    transition: 1s all;
+                    
                     transform: scale(1.1);
                 }
             }
@@ -41,7 +41,6 @@ $services-item-bg-2 : #ECD9D9;
                 height: 3* 3rem;
                 margin-bottom: 10px;
                 font-size: 2rem;
-
             }
             .learn-more{
                 display: inline-block;
@@ -73,10 +72,10 @@ $services-item-bg-2 : #ECD9D9;
             .services-content{
                 padding: 50px;
                 .services-description{
-                 line-height: 3.6rem;
-                height: 3* 3.6rem;
-                margin-bottom: 10px;
-                font-size: 2.6rem;   
+                    line-height: 3.6rem;
+                    height: 3* 3.6rem;
+                    margin-bottom: 10px;
+                    font-size: 2.6rem;
                 }
             }
         }
@@ -84,36 +83,36 @@ $services-item-bg-2 : #ECD9D9;
 }
 
 @media(min-width:992px){
-  .services-section{
+    .services-section{
         .services-item{
             .services-content{
                 padding: 80px 70px;
                 .services-description{
-                 line-height: 4.4rem;
-                height: 3* 4.4rem;
-                margin-bottom: 20px;
-                font-size: 3.6rem;   
+                    line-height: 4.4rem;
+                    height: 3* 4.4rem;
+                    margin-bottom: 20px;
+                    font-size: 3.6rem;
                 }
             }
         }
-    }  
+    }
 }
 
 @media(min-width:1200px){
-  .services-section{
-      .services-header{
-          margin-bottom: 46px;
-      }
+    .services-section{
+        .services-header{
+            margin-bottom: 46px;
+        }
         .services-item{
             .services-content{
                 padding: 123px 96px;
                 .services-description{
-                 line-height: 4.4rem;
-                height: 3* 4.4rem;
-                margin-bottom: 20px;
-                font-size: 3.6rem;   
+                    line-height: 4.4rem;
+                    height: 3* 4.4rem;
+                    margin-bottom: 20px;
+                    font-size: 3.6rem;
                 }
             }
         }
-    }  
+    }
 }
