--- a/public_html/scss/theme-partials/_trends.scss
+++ b/public_html/scss/theme-partials/_trends.scss
@@ -21,9 +21,10 @@ $border-bg : #ECD9D9;
         margin-bottom: 100px;
         figure{
             overflow: hidden;
-            img{                
+            img{ 
+                transition: 0.4s linear;
                 &:hover{
-                    transition: 0.4s ease-out;
+                    
                     transform: scale(1.1);                        
                 }
             }
