--- a/public_html/scss/theme.scss
+++ b/public_html/scss/theme.scss
@@ -10,3 +10,4 @@
 @import "theme-partials/_lead-section.scss";
 @import "theme-partials/_trends.scss";
 @import "theme-partials/_services.scss";
+@import "theme-partials/_team.scss";
