--- a/public_html/scss/theme.scss
+++ b/public_html/scss/theme.scss
@@ -11,3 +11,4 @@
 @import "theme-partials/_trends.scss";
 @import "theme-partials/_services.scss";
 @import "theme-partials/_team.scss";
+@import "theme-partials/_footer.scss";
