--- a/public_html/scss/theme.scss
+++ b/public_html/scss/theme.scss
@@ -12,3 +12,4 @@
 @import "theme-partials/_services.scss";
 @import "theme-partials/_team.scss";
 @import "theme-partials/_footer.scss";
+@import "theme-partials/_services-single.scss";
