--- a/public_html/css/theme.css
+++ b/public_html/css/theme.css
@@ -10372,4 +10372,61 @@ footer .copyright {
   }
 }
 
+.blog-section {
+  padding: 50px 0 50px;
+}
+
+.blog-section .blog-item {
+  margin-bottom: 70px;
+}
+
+.blog-section .pages {
+  padding: 30px 0 10px;
+  font-family: 'Bodoni' !important;
+  font-weight: 700;
+  letter-spacing: 3px;
+}
+
+.blog-section .pages .pages-num {
+  letter-spacing: 5px;
+  padding: 0 10px;
+}
+
+@media (min-width: 576px) {
+  .blog-section {
+    padding: 50px 0 30px;
+  }
+  .blog-section .blog-item {
+    margin-bottom: 100px;
+  }
+  .blog-section .pages {
+    padding: 10px 0 10px;
+  }
+}
+
+@media (min-width: 992px) {
+  .blog-section {
+    padding: 70px 0 30px;
+  }
+  .blog-section .blog-item {
+    margin-bottom: 120px;
+  }
+  .blog-section .pages {
+    padding: 0;
+    margin-top: -20px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .blog-section {
+    padding: 88px 0 20px;
+  }
+  .blog-section .blog-item {
+    margin-bottom: 120px;
+  }
+  .blog-section .pages {
+    margin-top: -30px;
+  }
+}
+
 /*# sourceMappingURL=theme.css.map */
