--- a/public_html/scss/theme.scss
+++ b/public_html/scss/theme.scss
@@ -13,3 +13,4 @@
 @import "theme-partials/_team.scss";
 @import "theme-partials/_footer.scss";
 @import "theme-partials/_services-single.scss";
+@import "theme-partials/_blog.scss";
