--- a/public_html/scss/theme.scss
+++ b/public_html/scss/theme.scss
@@ -14,3 +14,4 @@
 @import "theme-partials/_footer.scss";
 @import "theme-partials/_services-single.scss";
 @import "theme-partials/_blog.scss";
+@import "theme-partials/_blog-single.scss";
