--- a/public_html/scss/theme.scss
+++ b/public_html/scss/theme.scss
@@ -15,3 +15,4 @@
 @import "theme-partials/_services-single.scss";
 @import "theme-partials/_blog.scss";
 @import "theme-partials/_blog-single.scss";
+@import "theme-partials/_about.scss";
