--- a/public_html/scss/theme.scss
+++ b/public_html/scss/theme.scss
@@ -16,3 +16,4 @@
 @import "theme-partials/_blog.scss";
 @import "theme-partials/_blog-single.scss";
 @import "theme-partials/_about.scss";
+@import "theme-partials/_contact.scss";
