--- a/public_html/scss/theme.scss
+++ b/public_html/scss/theme.scss
@@ -17,3 +17,4 @@
 @import "theme-partials/_blog-single.scss";
 @import "theme-partials/_about.scss";
 @import "theme-partials/_contact.scss";
+@import "theme-partials/_error-404.scss";
