--- a/public_html/scss/theme-partials/_about.scss
+++ b/public_html/scss/theme-partials/_about.scss
@@ -40,6 +40,15 @@
         }
         .trends-item{
             margin-bottom: 100px;
+            figure{
+                overflow: hidden;
+                img{
+                    transition: 0.7s linear;
+                    &:hover{
+                        transform: scale(1.1);
+                    }
+                }
+            }
             .trends-info{
                 .trends-publish-date{
                     font-family: $bodoni;
